@@ -1,8 +1,9 @@
 update-manager (0.50) feisty; urgency=low
 
   * support --disable-component (AlwaysEnableUniverseMultiverse spec)
+  * look for lsb_release in PATH instead of hardcoding it (lp: #73075)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 23 Nov 2006 20:27:36 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 24 Nov 2006 08:52:33 +0100
 
 update-manager (0.45.1) edgy-updates; urgency=low
 
